--- a/p/smartwatch-top10-25-7.html
+++ b/p/smartwatch-top10-25-7.html
@@ -8,7 +8,7 @@
   <title>TechPick10 - Articles</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=M+PLUS+2:wght@400;500&family=WDXL+Lubrifont+JP+N&display=swap" rel="stylesheet">
-  <link href="/techpick10/p/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -278,6 +278,6 @@
 </svg>
 
   </div>
-  <script src="/techpick10/p/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
