--- a/p/smartwatch-top10-25-7.html
+++ b/p/smartwatch-top10-25-7.html
@@ -5,7 +5,7 @@
      crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TechPick10 - Articles</title>
+  <title>最新スマートウォッチTop10 - TechPick10</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=M+PLUS+2:wght@400;500&family=WDXL+Lubrifont+JP+N&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
