--- a/p/smartwatch-top10-25-7.html
+++ b/p/smartwatch-top10-25-7.html
@@ -225,6 +225,7 @@
     </div>
 
     </section>
+    <div id="watch-list"></div>
   </main>
   <div class="scroll-ball" id="scrollBall" title="ドラッグしてスクロール">
 
@@ -279,5 +280,159 @@
 
   </div>
   <script src="script.js"></script>
+  <script id="watch-data" type="application/json">
+  [
+    {
+      "name": "三星 Galaxy Watch 8 Classic",
+      "price": 77400,
+      "priceText": "¥77,400",
+      "pros": [
+        "回転ベゼルで直感操作",
+        "Vascular LoadやAntioxidant IndexなどAI健康診断",
+        "超高級感のあるデザインで、新しいデザイン"
+      ],
+      "cons": [
+        "通常モデルより1.5万ほど高め",
+        "やや分厚く重め",
+        "OneUIが全体的に、起動直後がラグい事がある"
+      ]
+    },
+    {
+      "name": "Apple Watch Series 10",
+      "price": 58000,
+      "priceText": "¥58,000",
+      "pros": [
+        "外でも見やすいディスプレイ",
+        "長年の技術による高精度健康センサー",
+        "Apple製品との連携が強力"
+      ],
+      "cons": [
+        "バッテリーは1日程度",
+        "セルラー版が高い",
+        "iOSにしか対応してない"
+      ]
+    },
+    {
+      "name": "Nothing CMF Watch Pro 2",
+      "price": 11000,
+      "priceText": "¥11,000",
+      "pros": [
+        "低価格なのに、OLED搭載",
+        "かなり軽くてつけやすい",
+        "通話対応・コスパ良い"
+      ],
+      "cons": [
+        "OSの機能が少なめ(WearOSと比べて)",
+        "回転ダイヤルがちょっと改善が必要(アップデートに希望はある)",
+        "スポーツバントの素材がちょっと安っぽい"
+      ]
+    },
+    {
+      "name": "華為 Watch GT 4",
+      "price": 30000,
+      "priceText": "¥30,000",
+      "pros": [
+        "上品な金属筐体＆高解像度画面",
+        "睡眠・運動・健康トラッキングが精緻",
+        "約6日間バッテリー長持ち"
+      ],
+      "cons": [
+        "アプリなどがWear OSと差が出る",
+        "Strava連携にやや工数あり",
+        "スマート機能に少し限界あり"
+      ]
+    },
+    {
+      "name": "Pixel Watch 3",
+      "price": 30000,
+      "priceText": "¥30,000",
+      "pros": [
+        "鮮やかで大きいディスプレイ",
+        "Fitbit健康機能×Google AI連携が本格化",
+        "Google製品との連携とスマート機能の進化"
+      ],
+      "cons": [
+        "バッテリー持続は相変わらず24–36時間",
+        "耐衝撃性や素材にやや不安あり",
+        "GPS・ワークアウト精度は競合に劣る"
+      ]
+    },
+    {
+      "name": "一加 Watch 3",
+      "price": 50000,
+      "priceText": "$349(¥50,000ほど)",
+      "pros": [
+        "大容量631mAhで5日駆動、低電力で最大16日",
+        "2200nit明るさ＆強い耐久性",
+        "Wear OS＋回転クラウン＋健康センシング"
+      ],
+      "cons": [
+        "ケース46.6mm＆重さ81gと大きい",
+        "iOS非対応・恐らく技適なし",
+        "ソフト更新保証は2年"
+      ]
+    },
+    {
+      "name": "TicWatch Pro 5",
+      "price": 35000,
+      "priceText": "¥35,000",
+      "pros": [
+        "二層ディスプレイで通常と省電力モード切替",
+        "Snapdragon W5＋Wear OSでUI軽快",
+        "電池持ち良好でスタイリッシュ"
+      ],
+      "cons": [
+        "ちょっとエコシステム不足",
+        "ディスプレイは微妙に地味",
+        "ストラップ質感に改善余地ありとのこと"
+      ]
+    },
+    {
+      "name": "Fitbit Sense 3",
+      "price": 40000,
+      "priceText": "¥40,000",
+      "pros": [
+        "バッテリー持ちが良い",
+        "ストレス検出やECGなどあり",
+        "Fitbit健康サブスクPremium連携強化"
+      ],
+      "cons": [
+        "アプリやUXに不満の声も",
+        "端末と相性制限あり",
+        "ハード性能はやや旧世代"
+      ]
+    },
+    {
+      "name": "Fossil Gen 6",
+      "price": 38500,
+      "priceText": "¥38,500",
+      "pros": [
+        "美しいデザイン＋豊富なフェイス",
+        "Wear OS搭載、GPayなど基本充実",
+        "比較的安価"
+      ],
+      "cons": [
+        "Snapdragon 4100世代で性能控えめ",
+        "バッテリー持ちは1.5〜2日程度",
+        "ヘルストラッキング特化度低め"
+      ]
+    },
+    {
+      "name": "小米 Watch S3",
+      "price": 20000,
+      "priceText": "約¥20,000〜30,000（中国価格）",
+      "pros": [
+        "Xiaomiらしい低価格×高スペック",
+        "アラート、フィットネストラッキング、長電池",
+        "多機能通知＋G/NFC搭載機種あり"
+      ],
+      "cons": [
+        "MIUI Wear内製OSでGoogle対応弱め",
+        "海外価格＆保証が日本で不安定",
+        "公式日本語サポート未整備"
+      ]
+    }
+  ]
+  </script>
 </body>
 </html>
