--- a/p/smartwatch-top10-25-7.html
+++ b/p/smartwatch-top10-25-7.html
@@ -24,208 +24,7 @@
     </div>
 
     <section class="articles">
-      <div class="card">
-        <img src="/techpick10/images/smartwatch-top10-25-7/galaxy.jpg" alt="スマートウォッチ">
-        <div class="card-content">
-          <h2 class="card-title">三星 Galaxy Watch 8 Classic</h2>
-          <div class="card-info">¥77,400</div>
-          <p class="card-excerpt">高級感あるデザインで、回転ベゼルが意外と便利で、AI機能搭載</p>
-          <h3 class="card-title">👍 良いところ</h3>
-          <p class="card-excerpt">回転ベゼルで直感操作
-            <br>Vascular LoadやAntioxidant IndexなどAI健康診断
-            <br>超高級感のあるデザインで、新しいデザイン
-          </p>
-          <h3 class="card-title">🧐 デメリット</h3>
-          <p class="card-excerpt">通常モデルより1.5万ほど高め
-            <br>やや分厚く重め
-            <br>OneUIが全体的に、起動直後がラグい事がある
-          </p>
-        </div>
-    </div>
-
-
-      <div class="card">
-        <img src="/techpick10/images/smartwatch-top10-25-7/apple.jpg" alt="スマートウォッチ">
-        <div class="card-content">
-          <h2 class="card-title">Apple Watch Series 10</h2>
-          <div class="card-info">¥58,000</div>
-          <p class="card-excerpt">薄くて高性能</p>
-          <h3 class="card-title">👍 良いところ</h3>
-          <p class="card-excerpt">外でも見やすいディスプレイ
-            <br>長年の技術による高精度健康センサー
-            <br>Apple製品との連携が強力
-          </p>
-          <h3 class="card-title">🧐 デメリット</h3>
-          <p class="card-excerpt">バッテリーは1日程度
-            <br>セルラー版が高い
-            <br>iOSにしか対応してない
-          </p>
-        </div>
-    </div>
-
-
-
-      <div class="card">
-        <img src="/techpick10/images/smartwatch-top10-25-7/cmf.webp" alt="スマートウォッチ">
-        <div class="card-content">
-          <h2 class="card-title">Nothing CMF Watch Pro 2</h2>
-          <div class="card-info">¥11,000</div>
-          <p class="card-excerpt">デザイン重視で低価格</p>
-          <h3 class="card-title">👍 良いところ</h3>
-          <p class="card-excerpt">低価格なのに、OLED搭載
-            <br>かなり軽くてつけやすい
-            <br>通話対応・コスパ良い
-          </p>
-          <h3 class="card-title">🧐 デメリット</h3>
-          <p class="card-excerpt">OSの機能が少なめ(WearOSと比べて)
-            <br>回転ダイヤルがちょっと改善が必要(アップデートに希望はある)
-            <br>スポーツバントの素材がちょっと安っぽい
-          </p>
-        </div>
-    </div>
-
-
-      <div class="card">
-        <img src="/techpick10/images/smartwatch-top10-25-7/huawei.jpg" alt="スマートウォッチ">
-        <div class="card-content">
-          <h2 class="card-title">華為 Watch GT 4</h2>
-          <div class="card-info">¥30,000</div>
-          <p class="card-excerpt">美しいデザインで1週間持つバッテリー</p>
-          <h3 class="card-title">👍 良いところ</h3>
-          <p class="card-excerpt">上品な金属筐体＆高解像度画面
-            <br>睡眠・運動・健康トラッキングが精緻
-            <br>約6日間バッテリー長持ち
-          </p>
-          <h3 class="card-title">🧐 デメリット</h3>
-          <p class="card-excerpt">アプリなどがWear OSと差が出る
-            <br>Strava連携にやや工数あり
-            <br>スマート機能に少し限界あり
-          </p>
-        </div>
-    </div>
-
-
-      <div class="card">
-        <img src="/techpick10/images/smartwatch-top10-25-7/google.jpg" alt="スマートウォッチ">
-        <div class="card-content">
-          <h2 class="card-title">Pixel Watch 3</h2>
-          <div class="card-info">¥30,000</div>
-          <p class="card-excerpt">大型＆高輝度ActuaディスプレイでFitbit統合</p>
-          <h3 class="card-title">👍 良いところ</h3>
-          <p class="card-excerpt">鮮やかで大きいディスプレイ
-            <br>Fitbit健康機能×Google AI連携が本格化
-            <br>Google製品との連携とスマート機能の進化
-          </p>
-          <h3 class="card-title">🧐 デメリット</h3>
-          <p class="card-excerpt">バッテリー持続は相変わらず24–36時間
-            <br>耐衝撃性や素材にやや不安あり
-            <br>GPS・ワークアウト精度は競合に劣る
-          </p>
-        </div>
-    </div>
-
-      <div class="card">
-        <img src="/techpick10/images/smartwatch-top10-25-7/oneplus.webp" alt="スマートウォッチ">
-        <div class="card-content">
-          <h2 class="card-title">一加 Watch 3</h2>
-          <div class="card-info">$349(¥50,000ほど)</div>
-          <p class="card-excerpt">WearOS搭載なのに5日持つバッテリー</p>
-          <h3 class="card-title">👍 良いところ</h3>
-          <p class="card-excerpt">大容量631mAhで5日駆動、低電力で最大16日
-            <br>2200nit明るさ＆強い耐久性
-            <br>Wear OS＋回転クラウン＋健康センシング
-          </p>
-          <h3 class="card-title">🧐 デメリット</h3>
-          <p class="card-excerpt">ケース46.6mm＆重さ81gと大きい
-            <br>iOS非対応・恐らく技適なし
-            <br>ソフト更新保証は2年
-          </p>
-        </div>
-    </div>
-
-
-      <div class="card">
-        <img src="/techpick10/images/smartwatch-top10-25-7/ticwatch.jpg" alt="スマートウォッチ">
-        <div class="card-content">
-          <h2 class="card-title">TicWatch Pro 5</h2>
-          <div class="card-info">¥35,000</div>
-          <p class="card-excerpt">Wear OS搭載、二層ディスプレイで堅実性能</p>
-          <h3 class="card-title">👍 良いところ</h3>
-          <p class="card-excerpt">二層ディスプレイで通常と省電力モード切替
-            <br>Snapdragon W5＋Wear OSでUI軽快
-            <br>電池持ち良好でスタイリッシュ
-          </p>
-          <h3 class="card-title">🧐 デメリット</h3>
-          <p class="card-excerpt">ちょっとエコシステム不足
-            <br>ディスプレイは微妙に地味
-            <br>ストラップ質感に改善余地ありとのこと
-          </p>
-        </div>
-    </div>
-
-
-      <div class="card">
-        <img src="/techpick10/images/smartwatch-top10-25-7/fitbit.webp" alt="スマートウォッチ">
-        <div class="card-content">
-          <h2 class="card-title">Fitbit Sense 3</h2>
-          <div class="card-info">¥40,000</div>
-          <p class="card-excerpt">Fitbit長年の健康計測強化モデル</p>
-          <h3 class="card-title">👍 良いところ</h3>
-          <p class="card-excerpt">バッテリー持ちが良い
-            <br>ストレス検出やECGなどあり
-            <br>Fitbit健康サブスクPremium連携強化
-          </p>
-          <h3 class="card-title">🧐 デメリット</h3>
-          <p class="card-excerpt">アプリやUXに不満の声も
-            <br>端末と相性制限あり
-            <br>ハード性能はやや旧世代
-          </p>
-        </div>
-    </div>
-
-
-      <div class="card">
-        <img src="/techpick10/images/smartwatch-top10-25-7/fossil.webp" alt="スマートウォッチ">
-        <div class="card-content">
-          <h2 class="card-title">Fossil Gen 6</h2>
-          <div class="card-info">¥38,500</div>
-          <p class="card-excerpt">クラシックなデザインで美しい</p>
-          <h3 class="card-title">👍 良いところ</h3>
-          <p class="card-excerpt">美しいデザイン＋豊富なフェイス
-            <br>Wear OS搭載、GPayなど基本充実
-            <br>比較的安価
-          </p>
-          <h3 class="card-title">🧐 デメリット</h3>
-          <p class="card-excerpt">Snapdragon 4100世代で性能控えめ
-            <br>バッテリー持ちは1.5〜2日程度
-            <br>ヘルストラッキング特化度低め
-          </p>
-        </div>
-    </div>
-
-
-
-      <div class="card">
-        <img src="/techpick10/images/smartwatch-top10-25-7/xiaomi.jpg" alt="スマートウォッチ">
-        <div class="card-content">
-          <h2 class="card-title">小米 Watch S3</h2>
-          <div class="card-info">約¥20,000〜30,000（中国価格）</div>
-          <p class="card-excerpt">中国ブランドの高コスパモデル</p>
-          <h3 class="card-title">👍 良いところ</h3>
-          <p class="card-excerpt">Xiaomiらしい低価格×高スペック
-            <br>アラート、フィットネストラッキング、長電池
-            <br>多機能通知＋G/NFC搭載機種あり
-          </p>
-          <h3 class="card-title">🧐 デメリット</h3>
-          <p class="card-excerpt">MIUI Wear内製OSでGoogle対応弱め
-            <br>海外価格＆保証が日本で不安定
-            <br>公式日本語サポート未整備
-          </p>
-        </div>
-    </div>
-
     </section>
-    <div id="watch-list"></div>
   </main>
   <div class="scroll-ball" id="scrollBall" title="ドラッグしてスクロール">
 
@@ -284,8 +83,10 @@
   [
     {
       "name": "三星 Galaxy Watch 8 Classic",
+      "img": "/techpick10/images/smartwatch-top10-25-7/galaxy.jpg",
       "price": 77400,
       "priceText": "¥77,400",
+      "excerpt": "高級感あるデザインで、回転ベゼルが意外と便利で、AI機能搭載",
       "pros": [
         "回転ベゼルで直感操作",
         "Vascular LoadやAntioxidant IndexなどAI健康診断",
@@ -298,9 +99,11 @@
       ]
     },
     {
-      "name": "Apple Watch Series 10",
+      "name": "Apple Watch Sasdfaeries 10",
+      "img": "/techpick10/images/smartwatch-top10-25-7/apple.jpg",
       "price": 58000,
       "priceText": "¥58,000",
+      "excerpt": "薄くて高性能",
       "pros": [
         "外でも見やすいディスプレイ",
         "長年の技術による高精度健康センサー",
@@ -314,8 +117,10 @@
     },
     {
       "name": "Nothing CMF Watch Pro 2",
+      "img": "/techpick10/images/smartwatch-top10-25-7/cmf.webp",
       "price": 11000,
       "priceText": "¥11,000",
+      "excerpt": "デザイン重視で低価格",
       "pros": [
         "低価格なのに、OLED搭載",
         "かなり軽くてつけやすい",
@@ -329,8 +134,10 @@
     },
     {
       "name": "華為 Watch GT 4",
+      "img": "/techpick10/images/smartwatch-top10-25-7/huawei.jpg",
       "price": 30000,
       "priceText": "¥30,000",
+      "excerpt": "美しいデザインで1週間持つバッテリー",
       "pros": [
         "上品な金属筐体＆高解像度画面",
         "睡眠・運動・健康トラッキングが精緻",
@@ -344,8 +151,10 @@
     },
     {
       "name": "Pixel Watch 3",
+      "img": "/techpick10/images/smartwatch-top10-25-7/google.jpg",
       "price": 30000,
       "priceText": "¥30,000",
+      "excerpt": "大型＆高輝度ActuaディスプレイでFitbit統合",
       "pros": [
         "鮮やかで大きいディスプレイ",
         "Fitbit健康機能×Google AI連携が本格化",
@@ -359,8 +168,10 @@
     },
     {
       "name": "一加 Watch 3",
+      "img": "/techpick10/images/smartwatch-top10-25-7/oneplus.webp",
       "price": 50000,
       "priceText": "$349(¥50,000ほど)",
+      "excerpt": "WearOS搭載なのに5日持つバッテリー",
       "pros": [
         "大容量631mAhで5日駆動、低電力で最大16日",
         "2200nit明るさ＆強い耐久性",
@@ -374,8 +185,10 @@
     },
     {
       "name": "TicWatch Pro 5",
+      "img": "/techpick10/images/smartwatch-top10-25-7/ticwatch.jpg",
       "price": 35000,
       "priceText": "¥35,000",
+      "excerpt": "Wear OS搭載、二層ディスプレイで堅実性能",
       "pros": [
         "二層ディスプレイで通常と省電力モード切替",
         "Snapdragon W5＋Wear OSでUI軽快",
@@ -389,8 +202,10 @@
     },
     {
       "name": "Fitbit Sense 3",
+      "img": "/techpick10/images/smartwatch-top10-25-7/fitbit.webp",
       "price": 40000,
       "priceText": "¥40,000",
+      "excerpt": "Fitbit長年の健康計測強化モデル",
       "pros": [
         "バッテリー持ちが良い",
         "ストレス検出やECGなどあり",
@@ -404,8 +219,10 @@
     },
     {
       "name": "Fossil Gen 6",
+      "img": "/techpick10/images/smartwatch-top10-25-7/fossil.webp",
       "price": 38500,
       "priceText": "¥38,500",
+      "excerpt": "クラシックなデザインで美しい",
       "pros": [
         "美しいデザイン＋豊富なフェイス",
         "Wear OS搭載、GPayなど基本充実",
@@ -419,8 +236,10 @@
     },
     {
       "name": "小米 Watch S3",
+      "img": "/techpick10/images/smartwatch-top10-25-7/xiaomi.jpg",
       "price": 20000,
       "priceText": "約¥20,000〜30,000（中国価格）",
+      "excerpt": "中国ブランドの高コスパモデル",
       "pros": [
         "Xiaomiらしい低価格×高スペック",
         "アラート、フィットネストラッキング、長電池",
