add search wul uihayeo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
   <title>TechPick10 - Articles</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=M+PLUS+2:wght@400;500&family=WDXL+Lubrifont+JP+N&display=swap" rel="stylesheet">
+  <meta name="description" content="TechPick10は最新のスマホ・スマートウォッチ・ガジェットのおすすめランキングやレビューを紹介するサイトです。">
+  <meta name="keywords" content="スマホ, スマートウォッチ, ガジェット, ランキング, レビュー, おすすめ, TechPick10">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://search3958.github.io/techpick10/">
+  <meta property="og:title" content="TechPick10 - Articles">
+  <meta property="og:description" content="最新のスマホ・スマートウォッチ・ガジェットのおすすめランキングやレビューを紹介。">
+  <meta property="og:image" content="https://search3958.github.io/techpick10/images/phone-25-7-1.png">
+  <meta property="og:url" content="https://search3958.github.io/techpick10/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="TechPick10 - Articles">
+  <meta name="twitter:description" content="最新のスマホ・スマートウォッチ・ガジェットのおすすめランキングやレビューを紹介。">
+  <meta name="twitter:image" content="https://search3958.github.io/techpick10/images/phone-25-7-1.png">
+  <meta name="author" content="TechPick10編集部">
+  <meta name="theme-color" content="#F75D2F">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "TechPick10",
+    "url": "https://search3958.github.io/techpick10/",
+    "description": "最新のスマホ・スマートウォッチ・ガジェットのおすすめランキングやレビューを紹介するサイトです。",
+    "inLanguage": "ja"
+  }
+  </script>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
