--- a/p/phone-25-7-1.html
+++ b/p/phone-25-7-1.html
@@ -9,6 +9,34 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=M+PLUS+2:wght@400;500&family=WDXL+Lubrifont+JP+N&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <meta name="description" content="実際に使ってきたスマホ10機種を、良かった点・惜しい点とともに紹介。リアルな体験レビュー。">
+  <meta name="keywords" content="スマホ, 実体験, レビュー, おすすめ, 使ってみた, TechPick10">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://search3958.github.io/techpick10/p/phone-25-7-1.html">
+  <meta property="og:title" content="自分が使ってきたスマホ10枚 - TechPick10">
+  <meta property="og:description" content="実際に使ってきたスマホ10機種を、良かった点・惜しい点とともに紹介。リアルな体験レビュー。">
+  <meta property="og:image" content="https://search3958.github.io/techpick10/images/phone-25-7-1.png">
+  <meta property="og:url" content="https://search3958.github.io/techpick10/p/phone-25-7-1.html">
+  <meta property="og:type" content="article">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="自分が使ってきたスマホ10枚 - TechPick10">
+  <meta name="twitter:description" content="実際に使ってきたスマホ10機種を、良かった点・惜しい点とともに紹介。リアルな体験レビュー。">
+  <meta name="twitter:image" content="https://search3958.github.io/techpick10/images/phone-25-7-1.png">
+  <meta name="author" content="TechPick10編集部">
+  <meta name="theme-color" content="#F75D2F">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "headline": "自分が使ってきたスマホ10枚 - TechPick10",
+    "description": "実際に使ってきたスマホ10機種を、良かった点・惜しい点とともに紹介。リアルな体験レビュー。",
+    "image": "https://search3958.github.io/techpick10/images/phone-25-7-1.png",
+    "author": {"@type": "Organization", "name": "TechPick10編集部"},
+    "datePublished": "2025-07-22",
+    "mainEntityOfPage": "https://search3958.github.io/techpick10/p/phone-25-7-1.html",
+    "inLanguage": "ja"
+  }
+  </script>
 </head>
 <body>
   <header>
