--- a/p/shouji-25-7.html
+++ b/p/shouji-25-7.html
@@ -9,6 +9,34 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=M+PLUS+2:wght@400;500&family=WDXL+Lubrifont+JP+N&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <meta name="description" content="2025年最新の中華スマホTop10を厳選紹介。ハイエンドモデル中心に性能・特徴・価格を徹底比較。">
+  <meta name="keywords" content="中華スマホ, スマートフォン, ランキング, ハイエンド, おすすめ, 2025, TechPick10">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://search3958.github.io/techpick10/p/shouji-25-7.html">
+  <meta property="og:title" content="良い感じの中華スマホTop10 - TechPick10">
+  <meta property="og:description" content="2025年最新の中華スマホTop10を厳選紹介。ハイエンドモデル中心に性能・特徴・価格を徹底比較。">
+  <meta property="og:image" content="https://search3958.github.io/techpick10/images/shouji-25-7.webp">
+  <meta property="og:url" content="https://search3958.github.io/techpick10/p/shouji-25-7.html">
+  <meta property="og:type" content="article">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="良い感じの中華スマホTop10 - TechPick10">
+  <meta name="twitter:description" content="2025年最新の中華スマホTop10を厳選紹介。ハイエンドモデル中心に性能・特徴・価格を徹底比較。">
+  <meta name="twitter:image" content="https://search3958.github.io/techpick10/images/shouji-25-7.webp">
+  <meta name="author" content="TechPick10編集部">
+  <meta name="theme-color" content="#F75D2F">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "headline": "良い感じの中華スマホTop10 - TechPick10",
+    "description": "2025年最新の中華スマホTop10を厳選紹介。ハイエンドモデル中心に性能・特徴・価格を徹底比較。",
+    "image": "https://search3958.github.io/techpick10/images/shouji-25-7.webp",
+    "author": {"@type": "Organization", "name": "TechPick10編集部"},
+    "datePublished": "2025-07-22",
+    "mainEntityOfPage": "https://search3958.github.io/techpick10/p/shouji-25-7.html",
+    "inLanguage": "ja"
+  }
+  </script>
 </head>
 <body>
   <header>
@@ -92,7 +120,7 @@
   },
   {
     "name": "OnePlus 13",
-    "img": "/techpick10/images/shouji-25-7/oneplus13.png",
+    "img": "/techpick10/images/shouji-25-7/oneplus13.jpg",
     "price": 130000,
     "priceText": "¥110,000〜¥150,000",
     "excerpt": "Snapdragon 8 Elite、最大24GB RAM、IP68/IP69防水を備えたパワフルなフラッグシップ。",
