--- a/p/smartwatch-top10-25-7.html
+++ b/p/smartwatch-top10-25-7.html
@@ -9,6 +9,34 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=M+PLUS+2:wght@400;500&family=WDXL+Lubrifont+JP+N&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <meta name="description" content="2025年最新のスマートウォッチTop10を徹底比較。機能・デザイン・価格で選ぶおすすめランキング。">
+  <meta name="keywords" content="スマートウォッチ, ランキング, おすすめ, 2025, 比較, TechPick10">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://search3958.github.io/techpick10/p/smartwatch-top10-25-7.html">
+  <meta property="og:title" content="最新スマートウォッチTop10 - TechPick10">
+  <meta property="og:description" content="2025年最新のスマートウォッチTop10を徹底比較。機能・デザイン・価格で選ぶおすすめランキング。">
+  <meta property="og:image" content="https://search3958.github.io/techpick10/images/25-7-smartwatch.webp">
+  <meta property="og:url" content="https://search3958.github.io/techpick10/p/smartwatch-top10-25-7.html">
+  <meta property="og:type" content="article">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="最新スマートウォッチTop10 - TechPick10">
+  <meta name="twitter:description" content="2025年最新のスマートウォッチTop10を徹底比較。機能・デザイン・価格で選ぶおすすめランキング。">
+  <meta name="twitter:image" content="https://search3958.github.io/techpick10/images/25-7-smartwatch.webp">
+  <meta name="author" content="TechPick10編集部">
+  <meta name="theme-color" content="#F75D2F">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "headline": "最新スマートウォッチTop10 - TechPick10",
+    "description": "2025年最新のスマートウォッチTop10を徹底比較。機能・デザイン・価格で選ぶおすすめランキング。",
+    "image": "https://search3958.github.io/techpick10/images/25-7-smartwatch.webp",
+    "author": {"@type": "Organization", "name": "TechPick10編集部"},
+    "datePublished": "2025-07-18",
+    "mainEntityOfPage": "https://search3958.github.io/techpick10/p/smartwatch-top10-25-7.html",
+    "inLanguage": "ja"
+  }
+  </script>
 </head>
 <body>
   <header>
